@@ -1,3 +1,11 @@
+2003-09-23 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b90
+
+	* Fixed bug: now prints errors for forgotten passwords in the correct
+	  place in login.php.
+
+	* Fixed bug: warnings were generated if you had no email notifications
+          in place, and sent email.
+
 2003-09-23  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b89
 
 	* Language Update: Korean (ko_KR), Hungarian (hu_HU), Japanese (ja_JP),
